modify the anlogin.py, add auto login

--- a/webpy-app/templates/login_suc.html
+++ b/webpy-app/templates/login_suc.html
@@ -1,1 +1,14 @@
-login successful
+<script>
+	function func()
+	{
+		document.getElementById()
+	}
+
+</script>
+
+<tr>
+	Login Success!
+</tr>
+
+<a>
+
