add the validate confirm

--- a/webpy-app/templates/login.html
+++ b/webpy-app/templates/login.html
@@ -9,15 +9,71 @@
 		document.getElementById("form_1").action="add_ano";
 		document.getElementById("form_1").submit();
 	}
+	function validate_email(field,alerttxt)
+	{
+		with(field)
+		{
+			apos=value.indexOf("@");
+			dotpos=value.lastIndexOf(".");
+			if(apos<1 || dotpos-apos<2)
+			{
+				alert(alerttxt);
+				return false;
+			}
+			else
+			{
+				return true;
+			}
+		}
+	}
+	function validate_username(field,alerttxt)
+	{
+		with(field)
+		{
+			if(value.length==0)
+			{
+				alert(alerttxt);
+				return false;
+			}
+			else
+				return true;
+		}
+	}
+	function validate_password(field,alerttxt)
+	{
+		with(field)
+		{
+			if(value.length<=6)
+			{
+				alert(alerttxt);
+				return false;
+			}
+			else
+				return true;
+		}
+	}
+	function validate_form(thisform)
+	{
+		if(validate_username(name,"please input validate username!")==false)
+		{
+			name.focus();
+			return false;
+		}
+		else if(validate_password(passwd, "the length of password should be at least 6"))
+		{
+			passwd.focus();
+			return false;
+		}
+	}
 </script>
-<form action="" method=POST name=form_1 id=form_1>
+<form action="" method=POST onsubmit="return validate_form(this);" name=form_1 id=form_1>
 	<table id="login">
 		<tr>
 			<td>User: </td>
-			<td><input type=text name=name></td>
+			<td><input type=text name=name id="user"></td>
 			</tr>
 		<tr>																            <td>Password: </td>
-			<td><input type="password" name=passwd></td>
+			<td><input type="password" name=passwd id="password"></td>
 		</tr>
 		<tr>
 			<td></td>
