--- a/webpy-app/templates/test.html
+++ b/webpy-app/templates/test.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Hello, world!</h1>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/home/hadoop/bootstrap/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
